@@ -1,6 +1,7 @@
 2.0.3-stable (2012-??-??)
 	* Added: Support for BYHOUR in FREQ=DAILY (@hollodk).
-	* Added: Support for 'GMT+????' format in TZID.
+	* Added: Support for 'GMT+????' format in TZID's.
+	* Added: Support for formats like SystemV/EST5EDT in TZID's.
 
 2.0.2-stable (2012-10-06)
 	* Added: includes.php file, to load the entire library in one go.
